--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -36,11 +36,10 @@
                     android:id="@+id/options"
                     android:layout_width="25dp"
                     android:layout_height="25sp"
-                    android:src="@drawable/img_logout"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="15dp"
                     android:layout_centerVertical="true"
-                    />
+                    android:layout_marginEnd="15dp"
+                    android:src="@drawable/img_logout" />
 
             </RelativeLayout>
 
